Correction des infos de contact

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <section id="contact">
       <h3>Contact</h3>
-      <form action="mailto:contact@premiereconstruction.be" method="POST" enctype="text/plain">
+      <form action="mailto:valentinheyninck@icloud.com" method="POST" enctype="text/plain">
         <label>Nom :</label><br>
         <input type="text" name="nom" required><br><br>
 
@@ -84,7 +84,7 @@
       </form>
 
       <p>Ou contactez-moi sur WhatsApp :</p>
-      <a href="https://wa.me/32470XXXXXX" class="whatsapp-button" target="_blank">💬 Ouvrir WhatsApp</a>
+      <a href="https://wa.me/32455138379" class="whatsapp-button" target="_blank">💬 Ouvrir WhatsApp</a>
     </section>
 
     <footer>
@@ -155,7 +155,7 @@
 
     <section id="contact">
       <h3>Contact</h3>
-      <form action="mailto:contact@premiereconstruction.be" method="POST" enctype="text/plain">
+      <form action="mailto:valentinheyninck@icloud.com" method="POST" enctype="text/plain">
         <label>Naam :</label><br>
         <input type="text" name="naam" required><br><br>
 
@@ -169,7 +169,7 @@
       </form>
 
       <p>Of neem rechtstreeks contact op via WhatsApp:</p>
-      <a href="https://wa.me/32470XXXXXX" class="whatsapp-button" target="_blank">💬 Open WhatsApp</a>
+      <a href="https://wa.me/32455138379" class="whatsapp-button" target="_blank">💬 Open WhatsApp</a>
     </section>
 
     <footer>
