Mise à jour : formulaire avec Formspree opérationnel

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <section id="contact">
       <h3>Contact</h3>
-      <form action="mailto:valentinheyninck@icloud.com" method="POST" enctype="text/plain">
+      <form action="https://formspree.io/f/mblypjop" method="POST">
         <label>Nom :</label><br>
         <input type="text" name="nom" required><br><br>
 
@@ -79,7 +79,7 @@
 
         <label>Message :</label><br>
         <textarea name="message" rows="5" required></textarea><br><br>
-
+<input type="hidden" name="_subject" value="Nouveau message depuis le site web">
         <input type="submit" value="Envoyer">
       </form>
 
@@ -155,16 +155,16 @@
 
     <section id="contact">
       <h3>Contact</h3>
-      <form action="mailto:valentinheyninck@icloud.com" method="POST" enctype="text/plain">
+      <form action="https://formspree.io/f/mblypjop" method="POST">
         <label>Naam :</label><br>
-        <input type="text" name="naam" required><br><br>
+        <input type="text" name="name" required><br><br>
 
         <label>Email :</label><br>
         <input type="email" name="email" required><br><br>
 
         <label>Bericht :</label><br>
-        <textarea name="bericht" rows="5" required></textarea><br><br>
-
+        <textarea name="message" rows="5" required></textarea><br><br>
+<input type="hidden" name="_subject" value="Nouveau message depuis le site web">
         <input type="submit" value="Verstuur">
       </form>
 
